--- a/nginx_sample.conf
+++ b/nginx_sample.conf
@@ -1,42 +1,47 @@
 server {
         listen 80;
-        server_name mtchang.jutainet.com;
+        server_name mtchang.example.com;
         return 301 https://$server_name$request_uri;
 }
 server {
 
        listen 443 ssl;
        listen 3331 ssl;
-       server_name mtchang.jutainet.com;
-#
+       server_name mtchang.example.com;
+
         ssl on;
-        ssl_certificate /etc/letsencrypt/live/mtchang.jutainet.com/cert.pem;
-        ssl_certificate_key /etc/letsencrypt/live/mtchang.jutainet.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/mtchang.example.com/cert.pem;
+        ssl_certificate_key /etc/letsencrypt/live/mtchang.example.com/privkey.pem;
 
         #access_log  /usr/share/nginx/html/logs/access.log  main;
         #error_log  /usr/share/nginx/html/logs/error.log warn;
 	server_tokens off;
         access_log  /var/log/nginx/mtchang/access.log main;
         error_log  /var/log/nginx/mtchang/error.log warn;
-        include conf.d/error_log.conf;
-        include conf.d/customer_ip_dev;
-        include conf.d/deny_taiwan_ip;
+
+        #include conf.d/error_log.conf;
+
+        # 全部通行白名單IP
+        #include /etc/nginx/conf.d/whitelist_ip;
+        # 指定阻擋黑名單
+        #include /etc/nginx/conf.d/blacklist_ip;
+        # 限制特定客戶IP通行，避免和上面混用
+        #include /etc/nginx/conf.d/only_customer_ip;
+        #include /etc/nginx/conf.d/allow_taiwan_ip;
+
+
+
         location / {
-              #include conf.d/blockip;
               root /usr/share/nginx/html/mtchang;
               index  index.php index.html index.htm;
         }
 
-	# CDN test by mtchang
-	#location /in {
-	#	proxy_pass http://cdn.playgt.com/site/in/;
-	#}
 
 
         location ~ \.php$ {
                 root           /usr/share/nginx/html/mtchang;
                 try_files $uri = 404;
-               #fastcgi_pass   127.0.0.1:9000;
+                #fastcgi_pass   127.0.0.1:9000;
                 fastcgi_pass unix:/var/opt/remi/php70/run/php-fpm/php-fpm.sock;
                 fastcgi_index  index.php;
                 fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
@@ -50,9 +55,9 @@ server {
                 set            $memcached_key $request_uri;
                 memcached_pass 127.0.0.1:11211;
         }
-	include conf.d/new_RewriteRule;
-        include conf.d/errors;
-        include conf.d/CDN;
-        include conf.d/adminpage;
+
+
+        #include conf.d/errors;
+        #include conf.d/CDN;
 
 }
